template: fix scroll on content overflow

--- a/fairy_admin/static/admin/css/admin.less
+++ b/fairy_admin/static/admin/css/admin.less
@@ -117,7 +117,7 @@
 
     .layui-body {
         left: 220px;
-        bottom: unset;
+        // bottom: unset;
 
         .breadcrumb {
             padding: 10px 15px;
